[package]
name = "tokio-noise"
version = "0.0.3"
edition = "2021"
authors = ["conduition <conduition@proton.me>"]
description = "A Noise protocol encryption layer on top of tokio streams."
license = "Unlicense"
repository = "https://github.com/conduition/tokio-noise"
keywords = ["noise", "tokio", "tcp", "ssl", "snow"]

[dependencies]
snow = { version = "0.9", default-features = false, features = ["ring-accelerated"] }
tokio = { version = "1", default-features = false, features = ["io-util", "net"] }
log = { version = "0.4", default-features = false }

[dev-dependencies]
bytes = { version = "1.6", default-features = false }
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
tokio = { version = "1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
